<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/app_content_bj"
    tools:context="com.incast.udi.eduphone.CategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:id="@+id/button_category_backward"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@mipmap/icon_title_back"
            android:paddingLeft="10dp"
            android:gravity="center"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="选择类别"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearlayout_remotecontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/icon_remotecontrol"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/remotecontrol_text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/device_gap_line" />

            <LinearLayout
                android:id="@+id/linearlayout_pushvideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/icon_pushvideo"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/pushvideo_text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/device_gap_line" />

            <LinearLayout
                android:id="@+id/linearlayout_pushfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/icon_pushvideo"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/pushfile_text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/device_gap_line" />

            <LinearLayout
            android:id="@+id/linearlayout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/icon_remotecontrol"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:text="@string/settings_text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/device_gap_line" />

            <LinearLayout
                android:id="@+id/linearlayout_system_and_projector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/icon_remotecontrol"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/control_system_and_projector_text"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/device_gap_line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
